--- a/package.json
+++ b/package.json
@@ -11,14 +11,22 @@
   },
   "dependencies": {
     "react": "16.13.1",
-    "react-native": "0.63.3"
+    "react-native": "0.63.3",
+    "react-native-gesture-handler": "^1.4.1",
+    "react-native-reanimated": "^1.2.0",
+    "react-navigation": "^4.0.0",
+    "react-navigation-stack": "^1.5.3",
+    "react-navigation-tabs": "^2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/runtime": "^7.12.1",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.1",
+    "babel-plugin-module-resolver": "^3.2.0",
     "eslint": "^7.12.0",
+    "eslint-import-resolver-babel-module": "^5.1.0",
+    "eslint-plugin-import": "^2.18.2",
     "jest": "^26.6.1",
     "metro-react-native-babel-preset": "^0.63.0",
     "react-test-renderer": "16.13.1"
